log
Fri, Apr 18, 2025  4:39:12 PM: 
 hashmap.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:34: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     if(nuevoMapa == NULL) return EXIT_FAILURE;
                                  ^~~~~~~~~~~~
hashmap.c:61:16: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         return EXIT_FAILURE;
                ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Fri, Apr 18, 2025  4:39:45 PM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:34: error: return makes pointer from integer without a cast [-Werror=int-conversion]
     if(nuevoMapa == NULL) return EXIT_FAILURE;
                                  ^~~~~~~~~~~~
hashmap.c:61:16: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         return EXIT_FAILURE;
                ^~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
30727f6
